Remove the custom photo tile, and instead use the same renderer we use in the admin to layout photos. This is really nice an clean, allows all the internal calculation for h/w/padding, etc... and fixes the a tag wrapped around a div tag problem.
svn commit r17591

--- a/www/styles/pinhole-photo-tile.css
+++ b/www/styles/pinhole-photo-tile.css
@@ -12,7 +12,7 @@
 	border: 1px solid #555753;
 }
 
-.pinhole-tile-view .swat-tile span.photo-title {
+.pinhole-tile-view .swat-tile div {
 	display: block;
 	height: 2em;
 	padding: 0.3em 0;
